add finalizers for the CR created

--- a/testdata/project-v3-with-deploy-image/config/rbac/role.yaml
+++ b/testdata/project-v3-with-deploy-image/config/rbac/role.yaml
@@ -54,6 +54,13 @@ rules:
 - apiGroups:
   - example.com.testproject.org
   resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - example.com.testproject.org
+  resources:
   - memcacheds
   verbs:
   - create
